<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/setting_profile_text"
            android:text="Privatise profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />

        <Switch
            android:id="@+id/setting_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/setting_profile_text"
            android:layout_alignParentRight="true"
            />

        <Button
            android:id="@+id/settings_tour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/take_app_tour"
            android:layout_below="@+id/setting_profile_text"
            android:background="?android:attr/selectableItemBackground"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings_changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setting_profile_text"
            android:background="?android:attr/selectableItemBackground"
            android:text="Change password"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/Cancel"
            android:textColor="@color/red"
            android:layout_below="@+id/setting_profile"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/settings_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/settings_okay"
            android:textColor="@color/lime"
            android:layout_below="@+id/setting_profile"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>